testsuite/tests/rewriting_errors/no_auto_fix/test.out
main.adb:3:4: rule violation: Custom rule violation
3 |    goto lbl;  --  FLAG
  |    ^^^^^^^^^

error: Rule "custom" is not defining any auto-fixing function
checker.lkql:2:30 in <anonymous>
  2 | analysis_units.map((unit) => node_checker(unit.root)).to_list
    |                              ^^^^^^^^^^^^^^^^^^^^^^^

checker.lkql:2:1 in checker.lkql
  2 | analysis_units.map((unit) => node_checker(unit.root)).to_list
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
